k8s/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: kvstore-headless
  namespace: kvstore
spec:
  clusterIP: None  # Headless
  publishNotReadyAddresses: true
  selector:
    app: kvstore
  ports:
  - name: kvstore
    port: 5555
    targetPort: 5555
